# zhetapi

./: .clang-format  .env  .gitignore  .gitmodules  .gitpod.Dockerfile  .readthedocs.yaml  .replit  .travis.yml  .types.h.swp  .zhpconfig  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.adoc  README.md  a.out  all.h  application.cpp  application.h  calc  cmake_install.cmake  compile_commands.json  compiler  core.a.out.3585.1583875604  core.a.out.3701.1583875613  core.a.out.4005.1582917112  core.a.out.4177.1582917154  core.a.out.4362.1582917201  core.a.out.6125.1583348925  core.a.out.6334.1583348967  core.a.out.6501.1583950624  core.a.out.6516.1583349014  core.zhetapi.12154.1580237207  core.zhetapi.12329.1580237236  core.zhetapi.12542.1580237286  core.zhetapi.12718.1580237309  core.zhetapi.12912.1580237326  core.zhetapi.13096.1580237354  core.zhetapi.13265.1580237377  (+44 more)
.circleci/: config.yml
.github/workflows/: cmake.yml
.theia/: launch.json  settings.json
calc.dSYM/Contents/: Info.plist
cfg/: config_manager.cpp
cli/: cli.cpp  sample
cmake/: colors.cmake  cuda.cmake  cuda_libs.sh  czhp.cmake  deps.cmake  dirs.cmake  exp.cmake  features.cmake  gui.cmake  lang.cmake  libs.cmake  ml.cmake  port.cmake  settings.cmake  zhetapi.cmake
czhp/: czhp.cpp  global.hpp  parser.cpp
debug/: tests-gdb
docs/: Doxyfile  conf.py  environment.yaml  index.rst  requirements.txt
docs/api/: activation.rst  api.rst  cast.rst  collection.rst  generator.rst  gnn.rst  gradient.rst  image.rst  indexable.rst  interval.rst  iterator.rst  layer.rst  linalg.rst  matrix.rst  module.rst  nvarena.rst  parametrization.rst  plot.rst  polynomial.rst  tensor.rst  token.rst  vector.rst
docs/guide/: guide.rst  variables.rst
docs/lessons/: index.rst
docs/source/: conf.py  index.rst
docs/zhp/: libs.rst  zhp.rst
doxygen/: dconfig
engine/: activation.hpp  activations.h  activations.hpp  algorithm.hpp  algorithms.h  api.hpp  application.h  archives  assignment.h  barn.h  barn.hpp  calculus.h  cast.hpp  cli.cpp  combinatorial.h  combinatorial.hpp  complex.hpp  config.h  constants.h  counter.hpp  dataset.hpp  debug.h  defaults.h  display.hpp  dnn.hpp  dnnopt.hpp  driver.cpp  element.h  engine.cpp  engine.hpp  equation.hpp  erf.hpp  exception.h  expression.h  expression.hpp  field.h  filter.hpp  fixed_vector.hpp  formatter.h  fourier.hpp  (+65 more)
engine/.trash/: expression_lexer.h  function_lexer.h  function_lexer.l  function_parser.h
engine/ads/: priority_buffer.hpp  sliding_buffer.hpp  tsqueue.hpp
engine/all/: ml.hpp  zhplib.hpp
engine/avr/: essentials.hpp  random.hpp  serial.hpp
engine/core/: activation_derivatives.hpp  algorithm.hpp  class.hpp  collection.hpp  common.hpp  dictionary.hpp  engine_base.hpp  enode.hpp  enode_parser.hpp  erf_derivates.hpp  erf_derivatives.hpp  expr_parser.hpp  ftable.hpp  functor.hpp  generator.hpp  generators.hpp  genoptns.hpp  indexable.hpp  iterator.hpp  kernels.hpp  label.hpp  lvalue.hpp  memory.hpp  method_table.hpp  module.hpp  node.hpp  node_list.hpp  (+25 more)
exe/: zhetapi
experimental/: benchmark.cpp  cuda.cu  exp.cpp  experimental.cpp  lang.cpp  main.cu  ml.cpp  mnist.cpp
glad/: glad.c  glad.h
inc/: label.hpp  node_manager.hpp  node_reference.hpp  notes  stree.hpp  types.hpp  variable_cluster.hpp  variable_holder.hpp
include/: activation.hpp  allocator.hpp  cast.hpp  common.hpp  complex.hpp  counter.hpp  dataset.hpp  display.hpp  dnn.hpp  erf.hpp  field.hpp  fixed_vector.hpp  fourier.hpp  gnn.hpp  image.hpp  layer.hpp  matrix.hpp  matrix_cpu.hpp  netnode.hpp  optimizer.hpp  parametrization.hpp  plot.hpp  range.hpp  rational.hpp  registration.hpp  sparse.hpp  tensor.hpp  training.hpp  vector.hpp  vector_type.hpp
interpreter/: execute.cpp  global.hpp  library.cpp  main.cpp  parser.cpp
matplotlib-cpp/: matplotlibcpp.h
mgr/: config_manager.cpp
physics/: .sconsign.dblite  Body.gd  SConstruct  main.cpp  main.tscn  project.godot
samples/: README.adoc  simple.zhp
samples/rl/: .gitignore  CMakeLists.txt  Makefile  agent.cpp  config.json  environment.cpp  field.cpp  global.hpp  heurestic.cpp  main.cpp  ml.cpp  results.csv  rl  run.sh  statistics.py  vis.cpp
samples/rl/algs/: ddql.cpp  dql.cpp  heurestic.cpp  heurestic.hpp  q_learning.cpp  rbf.hpp
scripts/: compile  generate  install  install_deps_linux.sh  install_deps_osx.sh  test_cli.sh  test_port.sh  test_port_build.sh
source/: algorithm.cpp  autograd.cpp  barn.cpp  class.cpp  complex.cpp  display.cpp  engine.cpp  engine_base.cpp  equation.cpp  function.cpp  image.cpp  io.cpp  label.cpp  linalg.cpp  lvalue.cpp  module.cpp  node.cpp  node_differential.cpp  node_differentiation.cpp  node_manager.cpp  node_reference.cpp  operand.cpp  operation.cpp  operation_holder.cpp  plot.cpp  polynomial.cpp  range.cpp  registration.cpp  rvalue.cpp  std_functions.cpp  timer.cpp  token.cpp  variable.cpp  variable_cluster.cpp
sources/: image.cpp
src/: .trees.h.swp  a.out  all.h  all_trees.h  application.h  assignment.h  common.h  core.a.out.2399.1576263358  core.a.out.4538.1575912530  core.a.out.4689.1575912601  core.a.out.4868.1575912608  core.a.out.5861.1575913046  core.a.out.7437.1576170814  core.a.out.7603.1576170838  debug.h  debug.sh  defaults.h  exception.h  expression.h  expression_lexer.l  expression_parser.h  expression_parser.y  flexer.l  fparser.h  fparser.y  func_stack.h  function.h  function_parser.y  functor.h  goals.txt  group.h  icecream.hpp  lex.f.c  lex.yy.c  list.h  main.cpp  module.h  node.h  operand.h  operation.h  (+20 more)
testing/: activation.cpp  calculus.cpp  global.hpp  linalg.cpp  main.cpp  matrix.cpp  polynomial.cpp  tensor.cpp  vector.cpp
tests/: activation.cpp  ex.cpp  exp.cpp  fctn.cpp  fourier.cpp  gpu.cu  interval.cpp  main.cpp  ml.cpp  output  portability.cpp  printing.cpp  psa.txt  special.cpp  tests.cpp  tests.in  timers.cpp  vector.cpp
texifier/: lexer.l  texifier.cpp  texifier.y
tools/: build.sh  debug.sh  runner.sh
web/: application.py  communicate.py  driver.cpp  graph.cpp  launch  process.cpp  run  sample.py  server.py
zhp/: default_differentiations.zhp  zhp.cpp
(+344 files in other folders)
